[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/global/slider_option.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/global/my_h_slider.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/actual/base/font_menus.tres" type="DynamicFont" id=4]

[node name="SliderOption" type="HBoxContainer"]
margin_top = 107.0
margin_right = 600.0
margin_bottom = 169.0
theme = ExtResource( 1 )
custom_constants/separation = 50
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = 8.0
margin_right = 115.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 4 )
text = "LABEL"

[node name="Control" type="Control" parent="."]
margin_left = 165.0
margin_right = 210.0
margin_bottom = 62.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 260.0
margin_right = 460.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource( 3 )

[node name="Value" type="Label" parent="."]
margin_left = 510.0
margin_top = 8.0
margin_right = 600.0
margin_bottom = 53.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 2

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_HSlider_value_changed"]
